# igi2-mef-library

./: README.md  example.py  pyproject.toml
src/igi2mef/: __init__.py  _constants.py  exceptions.py  models.py  parser.py
