[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "igi2mef"
version = "0.1.5"
description = "A clean, performant parser for IGI 2: Covert Strike binary MEF models."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Antigravity", email = "antigravity@gemini.ai" }
]
keywords = ["igi2", "mef", "parser", "3d-models", "reverse-engineering"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
"Homepage" = "https://github.com/user/igi2-mef-viewer"
"Bug Tracker" = "https://github.com/user/igi2-mef-viewer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["igi2mef*"]
